# DocuSync

./: .dev.vars.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.nginx  README.md  docker-compose.yml  index.html  index.pake.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  wrangler.toml
.github/workflows/: pake-build.yml
.trae/documents/: tauri-chat-sidebar-splitview.md
docs/: split-view-design.md
functions/api/: [[path]].ts  _middleware.ts  summarize.ts  upload.ts
src/: App.tsx  index.css  main.tsx
src-pake/: PakeOverlay.tsx  PakeProvider.tsx  config.ts  main.tsx  pake.css  useLocalStore.ts  useQAPanel.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AISettingsPanel.tsx  AccountPanel.tsx  ChatPanelContainer.tsx  ChatPanelTauri.tsx  DocumentViewer.tsx  DuplicateConfirm.tsx  FileHistory.tsx  FileUpload.tsx  ImagePreviewModal.tsx  Layout.tsx  MarkdownViewer.tsx  OfficeViewer.tsx  PaneHeader.tsx  PdfViewer.tsx  SelectionToolbar.tsx  ShareDialog.tsx  SimplePaneHeader.tsx  SplitPane.tsx  SplitPickerPopover.tsx  SummaryPanel.tsx
src/hooks/: useAIServices.ts  useAccount.ts  useChatPanelTauri.ts  useFileHistory.ts  useFileUpload.ts  useScrollPosition.ts  useShare.ts  useSplitView.ts  useSummary.ts
src/lib/: api.ts  device-id.ts
src/pages/: SharePreview.tsx
src/services/: fileService.ts  summaryService.ts
worker/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  wrangler.toml
(+11 files in other folders)
