[package]
name = "docusync-tauri"
version = "0.1.0"
description = "DocuSync with DeepSeek Chat"
authors = ["you"]
edition = "2021"

[lib]
name = "docusync_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
